[package]
name = "resize-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2.5"
image = "0.25.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
lazy_static = "1.4"